# models/NewsModel.js
@@ -1,0 +1,39 @@
+import { Sequelize } from 'sequelize';
+import db from '../config/Database.js';
+
+const { DataTypes } = Sequelize;
+
+const News = db.define('news', {
+    title: {
+        type: DataTypes.STRING,
+        allowNull: false
+    },
+    description: {
+        type: DataTypes.STRING,
+        allowNull: false
+    },
+    source: {
+        type: DataTypes.STRING,
+        allowNull: true
+    },
+    date_published: {
+        type: DataTypes.DATE,
+        allowNull: true
+    },
+    url: {
+        type: DataTypes.STRING,
+        allowNull: true
+    },
+    image: {
+        type: DataTypes.STRING,
+        allowNull: true
+    },
+    category: {
+        type: DataTypes.STRING,
+        allowNull: true
+    }
+}, {
+    freezeTableName: true
+});
+
+export default News;
